--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="author" content="Alexander Stanichuk">
         <meta name="description" content="Foxtrot Lodge is a resort settled deep in the Swiss Alps. This is my final project for GIT 215.">
         <!-- Favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico?" type="image/x-icon">
-        <link rel="icon" href="images/favicon.ico?" type="image/x-icon">
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <!-- Font Links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
